WIP: Close to complete scanner, template strings to come after.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,66 +1,50 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in library 'weblex'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--lib",
-                    "--package=weblex"
-                ],
-                "filter": {
-                    "name": "weblex",
-                    "kind": "lib"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug executable 'weblex'",
-            "cargo": {
-                "args": [
-                    "build",
-                    "--bin=weblex",
-                    "--package=weblex"
-                ],
-                "filter": {
-                    "name": "weblex",
-                    "kind": "bin"
-                }
-            },
-            "args": [
-                "./test/test.js"
-            ],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in executable 'weblex'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--bin=weblex",
-                    "--package=weblex"
-                ],
-                "filter": {
-                    "name": "weblex",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug unit tests in library 'weblex'",
+      "cargo": {
+        "args": ["test", "--no-run", "--lib", "--package=weblex"],
+        "filter": {
+          "name": "weblex",
+          "kind": "lib"
         }
-    ]
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'weblex'",
+      "cargo": {
+        "args": ["build", "--bin=weblex", "--package=weblex"],
+        "filter": {
+          "name": "weblex",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug unit tests in executable 'weblex'",
+      "cargo": {
+        "args": ["test", "--no-run", "--bin=weblex", "--package=weblex"],
+        "filter": {
+          "name": "weblex",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    }
+  ]
 }
