Improved `git_token` function, fixed adding newlines as identifier tokens

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,9 @@
           "kind": "bin"
         }
       },
-      "args": [],
+      "args": [
+        "./test/test.js"
+      ],
       "cwd": "${workspaceFolder}"
     },
     {
